Ported to architectury 1.19.4